--- a/index.html
+++ b/index.html
@@ -5,24 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Progress steps</title>
 </head>
 <body>
     <h1>Progress Steps</h1>
+       
     <div class="container">
         <div class="progress-container">
             <div class="progress" id="progress"></div>
-            <div class="circle active">1</div>
-            <div class="circle">2</div>
-            <div class="circle">3</div>
-            <div class="circle">4</div>
+            <div class="circle active"><i class="fas fa-check"></i></div>
+            <div class="circle"><i class="fas fa-check"></i></div>
+            <div class="circle"><i class="fas fa-check"></i></div>
+            <div class="circle"><i class="fas fa-check"></i></div>
         </div>
 
         <button class="btn" id="prev" disabled>Prev</button>
         <button class="btn" id="next">Next</button>
        
     </div>
-
+    <div class="text-content">
+        <div class="text dark">Shopping Basket</div>
+        <div class="text">Personal Details</div>
+        <div class="text">Shipping Details</div>
+        <div class="text">Confirmation</div>
+    </div>
 
 
     <script src="/main.js"></script>
