--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Progress steps</title>
 </head>
 <body>
-    <h1>Progress Steps</h1>
+    <h1>Progress Steps Design</h1>
        
     <div class="container">
         <div class="progress-container">
